# peat

./: Cargo.toml  README.md
docker/alpine/: Dockerfile  gclouddock.sh  testshell.sh
docker/ubuntu/: Dockerfile  gclouddock.sh  testshell.sh
examples/: declarations.peat  hello.peat  nested.peat  pick.peat  pick1.peat  pickall.peat  range.peat
src/: bash.rs  code.rs  config.rs  declaration.rs  error.rs  evaluate.rs  expression.rs  lib.rs  main.rs  matryoshka.rs  parse.rs  peatcode.rs  read.rs  script_files.rs  sh.rs  substitute.rs  tokenize.rs  tree.rs  types.rs  util.rs  value.rs  version.rs
src/code/: declaration.rs  evaluate.rs  expression.rs  parse.rs  tree.rs  types.rs
src/peatcode/: declaration.rs  evaluate.rs  expression.rs  parse.rs  tokenize.rs  tree.rs  types.rs  value.rs  version.rs
src/util/: error.rs  matryoshka.rs
wdl/: scatter_with_peat.wdl  scatter_with_peat_inputs.json  scatter_without_peat.wdl  scatter_without_peat_inputs.json
